--- a/KhachHang/app/src/main/res/layout/fragment_feedback.xml
+++ b/KhachHang/app/src/main/res/layout/fragment_feedback.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".view.activity.FeedbackActivity">
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,6 +46,7 @@
             android:inputType="textMultiLine"
             android:isScrollContainer="true"
             android:lines="10"
+            android:scrollbars="vertical"
             android:maxLength="500"
             android:maxLines="10"
             android:padding="16dp"
