--- a/QuanLyNhaHang/app/src/main/res/drawable/bg_list_item_thuc_don.xml
+++ b/QuanLyNhaHang/app/src/main/res/drawable/bg_list_item_thuc_don.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#e7c770"/>
-    <stroke android:color="@color/colorBackgroudSesion" android:width="1dp"/>
+    <solid android:color="#ffffff"/>
+    <stroke android:color="#afafaf" android:width="1dp"/>
 </shape>
