--- a/QuanLyNhaHang/app/src/main/res/layout-land/item_dat_ban.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/item_dat_ban.xml
@@ -4,50 +4,42 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_list_item_thuc_don_order"
     android:gravity="center_vertical"
-    android:padding="2dp"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/iv_thuc_don"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_food" />
+    android:orientation="horizontal"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/tv_ten_mon"
+        android:id="@+id/tv_ten_khach_hang"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:maxLines="2"
         android:isScrollContainer="true"
+        android:maxLines="2"
+        android:paddingLeft="16dp"
         android:scrollbars="vertical"
-        android:text="Tranh muối không Đường"
+        android:text="Trần Văn Thắng"
         android:textColor="@color/colorTextTenMon"
         android:textSize="12sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tv_so_luong"
-        android:layout_width="40dp"
+        android:id="@+id/tv_gio_den"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="5 ly"
+        android:text="04:13 AM - 05/03/2017"
         android:textColor="@color/colorTextThongTinBan"
         android:textSize="11sp" />
 
-    <TextView
-        android:id="@+id/tv_don_gia"
-        android:layout_width="52dp"
+    <ImageButton
+        android:id="@+id/btn_edit_dat_ban"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1k"
-        android:textColor="@color/colorTextTongTien"
-        android:textSize="11sp"
-        android:textStyle="italic" />
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_edit" />
 
     <ImageButton
-        android:id="@+id/btn_delete_mon_order"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:id="@+id/btn_delete_dat_ban"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@android:color/transparent"
+        android:paddingLeft="16dp"
         android:src="@drawable/ic_delete" />
 </LinearLayout>
