--- a/QuanLyNhaHang/app/src/main/res/layout-land/item_nhom_mon.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/item_nhom_mon.xml
@@ -7,6 +7,8 @@
         android:layout_width="102dp"
         android:layout_height="36dp"
         android:layout_margin="2dp"
+        android:isScrollContainer="true"
+        android:scrollbars="horizontal"
         android:background="#884b00"
         android:gravity="center"
         android:text="Caffe"
