--- a/QuanLyNhaHang/app/src/main/res/layout/activity_main.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
             android:textSize="12sp" />
 
         <Button
-            android:id="@+id/btn_repository"
+            android:id="@+id/btn_dat_ban"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/menu_button_background"
